Tue Jun 22 15:28:12 2004  Michal Rokos  <michal@ruby-lang.org>

	* compar.c: Remove explicit NIL_P() checks since rb_cmpint() does it
	again in the exactly same manner.

Tue Jun 22 01:32:40 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_pkey_dh.c (ossl_dh_initialize): should create
	  empty pkey object if no argument is passed. [ruby-talk:103328]

	* ext/openssl/ossl_pkey_dsa.c (ossl_dsa_initialize): ditto.

	* ext/openssl/ossl_pkey_rsa.c (ossl_rsa_initialize): ditto.

	* ext/openssl/ossl_pkey_dh.c: add new methods: OpenSSL::PKey::DH#p,
	  OpenSSL::PKey::DH#p=, OpenSSL::PKey::DH#g, OpenSSL::PKey::DH#g=,
	  OpenSSL::PKey::DH#pub_key, OpenSSL::PKey::DH#pub_key=,
	  OpenSSL::PKey::DH#priv_key and OpenSSL::PKey::DH#priv_key=.

	* ext/openssl/ossl_pkey_dsa.c: add new methods: OpenSSL::PKey::DSA#p,
	  OpenSSL::PKey::DSA#p=, OpenSSL::PKey::DSA#q, OpenSSL::PKey::DSA#q=,
	  OpenSSL::PKey::DSA#g, OpenSSL::PKey::DSA#g=,
	  OpenSSL::PKey::DSA#pub_key, OpenSSL::PKey::DSA#pub_key=,
	  OpenSSL::PKey::DSA#priv_key and OpenSSL::PKey::DSA#priv_key=.

Mon Jun 21 09:24:51 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_opendir): should set errno if error occurs
	  when calling OS API.

Sun Jun 20 21:12:54 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (binary=): send TYPE commands only once.

Sat Jun 19 13:27:01 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (method_call): allow changing $SAFE.  [ruby-dev:23713]

	* eval.c (proc_set_safe_level, proc_invoke, rb_mod_define_method): not
	  set $SAFE for methods defined from Proc.  [ruby-dev:23697]

Sat Jun 19 01:10:12 2004  Kouhei Sutou  <kou@cozmixng.org>

	* sample/rss/tdiary_plugin/rss-recent.rb: added more information.

Fri Jun 18 23:12:22 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (proc_save_safe_level, rb_set_safe_level, safe_setter): limit
	  safe level.

Wed Jun 16 23:05:57 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
